--- a/LINKER/src/main/webapp/css/common.css
+++ b/LINKER/src/main/webapp/css/common.css
@@ -61,7 +61,7 @@ header{ height: 100px;width: 1200px;margin: 0 auto;}
 .sign_up{background-color: #2F4858; color: #fff;}
 
 /* header_second_line */
-.header_second_line{ display: flex; justify-content: space-between; align-items: center; padding: 0 20px;}
+.header_second_line{ display: flex; justify-content: space-between; align-items: center; padding: 0 20px; height: 40px;}
 
 
 /** drop_down **/
@@ -74,15 +74,15 @@ header{ height: 100px;width: 1200px;margin: 0 auto;}
 .main_menu li:hover a{color: #fff;text-decoration: none;}
 
 /** header_tool **/
-.header_tool{/*overflow: hidden;*/ padding-right: 50px; width: 400px; display: flex; justify-content: space-around; align-items: center;}
-.left_tool{width: 250px;height: 50px;position: relative; left: 10%;}
+.header_tool{/*overflow: hidden;*/ padding-right: 50px; width: 350px; display: flex; justify-content: space-around; align-items: center;}
+.left_tool{width: 250px;height: 50px;position: relative; left: 5%;}
 .left_tool > input{border-style: none; width: 250px;height: 35px;background-color: #fff; border: 1px solid #777; border-radius: 50px;}
 .left_tool > input[placeholder]{padding-left: 15px; font-size: 13px;}
 
 .search_icon{position: absolute;top: 0px; right: 5px;}
 .search_icon img{width: 35px;height: 35px; cursor: pointer;}
 
-.right_tool{width: 150px;height: 50px;position: relative;padding-left: 100px;}
+.right_tool{width: 150px;height: 40px;position: relative;padding-left: 80px;}
 .right_tool > div{ width: 40px;height: 40px;line-height: 40px; text-align: center;cursor: pointer;}
 .bucket_icon{position: absolute; top: 0; right: -45px;}
 
@@ -92,7 +92,7 @@ header{ height: 100px;width: 1200px;margin: 0 auto;}
 
 
 /* section */
-section{width: 100%; margin-top: 101px;}
+section{width: 1200px; margin: 0 auto; margin-top: 101px;}
 
 /*sec_area : another_file*/
 .sec_area{height: 615px;}
@@ -100,9 +100,9 @@ section{width: 100%; margin-top: 101px;}
 /** slide */
 #slide{width: 1200px;height: 480px; position: relative; overflow:hidden; margin: 0 auto; padding: 30px 0;}
 #slide div{width: 100%;height: 100%;position: absolute; left: 100%; cursor: pointer;}
-#slide div:nth-child(1){left:0;background: url("../img/slide1.png") center no-repeat;}
-#slide div:nth-child(2){background: url("../img/slide2.png") center no-repeat;}
-#slide div:nth-child(3){background: url("../img/slide3.png") center no-repeat;}
+#slide div:nth-child(1){left:0;background: url("/img/slide1.png") center no-repeat;}
+#slide div:nth-child(2){background: url("/img/slide2.png") center no-repeat;}
+#slide div:nth-child(3){background: url("/img/slide3.png") center no-repeat;}
 
 /** section_banner **/
 .section_banner{width: 1200px; height: 350px;background: #E2DCA7; margin: 0 auto;margin-top: 30px;display: flex; justify-content: space-between; align-items: center;}
@@ -176,8 +176,8 @@ section{width: 100%; margin-top: 101px;}
 
 
 /* header_problem by another file */
-.hd_drop{padding-bottom: 12px;}
-.hd_cart { overflow: hidden; padding-left: 0px;}
-.hd_left_t>input{width: 230px;height: 32px;}
-.hd_right_t{height: 40px;}
-.ft_area{bottom: 0;}
+/* .hd_drop{padding-bottom: 12px;} */
+/* .hd_cart { overflow: hidden; padding-left: 0px;} */
+/* .hd_left_t>input{width: 230px;height: 32px;} */
+/* .hd_right_t{height: 40px;} */
+/* .ft_area{bottom: 0;} */
